--- a/modal.html
+++ b/modal.html
@@ -13,14 +13,7 @@
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/RegalCalendar.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script>
-    $(function() {
-        $('#rCalendar').RegalCalendar({
-            modal: true,
-            theme: '#007bff'
-        });
-    });
-    </script>
+    
 </head>
 
 <body>
@@ -33,16 +26,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.php">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="start.php">Quick start</a>
+                    <a class="nav-link" href="start.html">Quick start</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="modal.php">Modal calendar</a>
+                    <a class="nav-link" href="modal.html">Modal calendar</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="preview.php">Preview text</a>
+                    <a class="nav-link" href="preview.html">Preview text</a>
                 </li>
             </ul>
         </div>
@@ -98,31 +91,31 @@
 </pre>
                 <div id="rCalendar" class="regalcalendar">
                     <span class="event" data-title="Event 1" data-location="Buenos Aires St, Guadalupe,Durango,Mexico"
-                        data-date="24/12/2019" data-time="16:00" data-icon="fas fa-holly-berry" data-types="address"
+                        data-date="24/12/" data-time="16:00" data-icon="fas fa-holly-berry" data-types="address"
                         data-preview="Christmas Eve">Excepteur sint occaecat
                         cupidatat non proident, sunt in culpa qui Lorem ipsum dolor sit amet, nostrud exercitation
                         ullamco laboris nisi ut aliqu se cillum dolore eu fugiat nulla pariatur</span>
-                    <span class="event" data-title="Event 2" data-location="France" data-date="13/12/2019"
+                    <span class="event" data-title="Event 2" data-location="France" data-date="13/12/"
                         data-time="12:00" data-icon="fas fa-baseball-ball" data-types="country"
                         data-preview="baseball-game">Excepteur sint occaecat cupidatat non proident,
                         sunt in culpa qui Lorem ipsum dolor sit amet, nostrud exercitation ullamco laboris
                         nisi ut aliqu se cillum dolore eu fugiat nulla pariatur</span>
                     <span class="event" data-title="Event 3" data-location="Buenos Aires St, Guadalupe, Durango,Mexico"
-                        data-date="11/01/2020" data-time="16:00" data-icon="fa fa-baby" data-types="address"
+                        data-date="11/01/" data-time="16:00" data-icon="fa fa-baby" data-types="address"
                         data-preview="Baby shower">Excepteur sint occaecat
                         cupidatat non proident, sunt in culpa qui Lorem ipsum dolor sit amet, nostrud exercitation
                         ullamco laboris nisi ut aliqu se cillum dolore eu fugiat nulla pariatur</span>
-                    <span class="event" data-title="Event 4" data-location="France" data-date="29/01/2020"
+                    <span class="event" data-title="Event 4" data-location="France" data-date="29/01/"
                         data-time="12:00" data-icon="fas fa-user-md" data-types="country"
                         data-preview="medical appointment">Excepteur sint occaecat cupidatat non proident,
                         sunt in culpa qui Lorem ipsum dolor sit amet, nostrud exercitation ullamco laboris
                         nisi ut aliqu se cillum dolore eu fugiat nulla pariatur</span>
                     <span class="event" data-title="Event 5" data-location="Buenos Aires St, Guadalupe,Durango,Mexico"
-                        data-date="04/02/2020" data-time="16:00" data-icon="fas fa-school" data-types="address"
+                        data-date="04/02/" data-time="16:00" data-icon="fas fa-school" data-types="address"
                         data-preview="Start classes">Excepteur sint occaecat
                         cupidatat non proident, sunt in culpa qui Lorem ipsum dolor sit amet, nostrud exercitation
                         ullamco laboris nisi ut aliqu se cillum dolore eu fugiat nulla pariatur</span>
-                    <span class="event" data-title="Event 6" data-location="France" data-date="18/02/2020"
+                    <span class="event" data-title="Event 6" data-location="France" data-date="18/02/"
                         data-time="12:00" data-icon="fas fa-birthday-cake" data-types="country"
                         data-preview="Birthday">Excepteur sint occaecat cupidatat non proident,
                         sunt in culpa qui Lorem ipsum dolor sit amet, nostrud exercitation ullamco laboris
@@ -131,6 +124,28 @@
             </div>
         </div>
     </div>
+
+    <script>
+        const d = new Date();
+        let year = d.getFullYear();
+        
+        document.querySelectorAll('.event').forEach(el => {
+            const f = el.getAttribute('data-date');
+            if (f && f.endsWith('/')) {
+                el.setAttribute('data-date', `${f}${year}`);
+            }
+        });
+
+    </script>
+
+    <script>
+        $(function() {
+            $('#rCalendar').RegalCalendar({
+                modal: true,
+                theme: '#007bff'
+            });
+        });
+        </script>
     <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
 </body>
 
